--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="icon" href="https://i.ibb.co/hDfVdmZ/icon.png">
+	<link rel="icon" href="https://i.ibb.co/k84NdGP/logo.png">
 	<title>개인정보처리방침</title>
 </head>
 
@@ -30,7 +30,7 @@
 		<p class="ls2">다. 마케팅 및 광고에의 활용</p>
 		<p class="ls2">신규 서비스(제품) 개발 및 맞춤 서비스 제공, 서비스의 유효성 확인 등을 목적으로 개인정보를 처리합니다.</p></br></br></br>
 		<p class='lh6 bs4'><strong>2. 개인정보 파일 현황</br></strong></p>
-		<p class='ls2'>1. 개인정보 파일명 : userId</br> - 개인정보 항목 : 빅스비 유저 아이디</br> - 수집방법 : 캡슐 즐겨찾기 설정</br> - 보유근거 : 즐겨찾기 맞춤
+		<p class='ls2'>1. 개인정보 파일명 : userId</br> - 개인정보 항목 : 빅스비 유저 아이디</br> - 수집방법 : 장소 및 위치 등록</br> - 보유근거 : 유저 장소 검색/관리
 			서비스</br> - 보유기간 : 지체없이 파기</br></br>
 			<p class='lh6 bs4'><strong>3. 개인정보의 처리 및 보유 기간</strong></br></br>① <em class="emphasis">
 					<Joon Choi>('캡슐')
