--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -37,7 +37,7 @@
 				</em>은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집시에 동의 받은 개인정보 보유,이용기간 내에서 개인정보를 처리,보유합니다.</br></br>②
 				각각의
 				개인정보 처리 및 보유 기간은 다음과 같습니다.</p>1.<제화 또는 서비스 제공></br>
-				<제화 또는 서비스 제공>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<지체없이 파기>까지 위 이용목적을 위하여 보유.이용됩니다.</br>-보유근거 : 즐겨찾기 맞춤
+				<제화 또는 서비스 제공>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<지체없이 파기>까지 위 이용목적을 위하여 보유.이용됩니다.</br>-보유근거 : 유저 장소 검색/관리
 						서비스</br></br>
 
 						<p class="lh6 bs4"><strong>4. 정보주체와 법정대리인의 권리·의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수
